--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
 
 <head>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-61883351-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-61883351-1');
+    </script>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="author" content="Aleix Castells" />
 
     <!-- Page Title-->
-    <title>New project</title>
+    <title>la mar</title>
 
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" sizes="192x192" href="img/favicon.png">
@@ -22,7 +33,7 @@
 <body class="bootstrap">
 
     <div id="loader" class="loader"></div>
-    <div id="header_fixed" class="header_fixed hidden">beach data</div>
+    <div id="header_fixed" class="header_fixed hidden">beach data <button id="expand_button" class="expand_button">expand all</button></div>
 
     <!-- Page content-->
     <div class="container main_table_container">
@@ -42,6 +53,22 @@
 
 
     <!-- Bootstrap core JS-->
+
+    <script>
+
+
+
+        function closeTables(toggle) {
+            if (toggle == true) {
+                for (let j = 1; j <= LOCATION_ARRAY.length; j++) {
+                    document.getElementById('table_div_' + j).classList.replace('table_div_open', 'table_div_collapsed')
+                    document.getElementById('inner_div_' + j).classList.replace('visible', 'hidden')
+                }
+            }
+        }
+
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script type="module" src="js/main.js"></script>
