Optimised and separated functions into modules

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/marine_weather.css" rel="stylesheet" />
+    <link href="css/intensity_colors.css" rel="stylesheet" />
 
 </head>
 
@@ -53,21 +54,6 @@
 
 
     <!-- Bootstrap core JS-->
-
-    <script>
-
-
-
-        function closeTables(toggle) {
-            if (toggle == true) {
-                for (let j = 1; j <= LOCATION_ARRAY.length; j++) {
-                    document.getElementById('table_div_' + j).classList.replace('table_div_open', 'table_div_collapsed')
-                    document.getElementById('inner_div_' + j).classList.replace('visible', 'hidden')
-                }
-            }
-        }
-
-    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
